JWT middleware + user update
